--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
-.idea/
+.idea/workspace.xml
+.idea/encodings.xml
+.idea/misc.xml
+.idea/modules.xml
+.idea/PHP.iml
+.idea/vcs.xml
+.idea/workspace.xml
+
